2015-11-20 Robert Heel <typo3@bobosch.de>
	* Security fix: Use GET params instead of a session.

2015-04-23 Robert Heel <typo3@bobosch.de>
	* Add: Hebrew FE translation (Thanks to Oleg Sverdlov).

2014-11-16 Robert Heel <typo3@bobosch.de>
	* Bugfix: Compatibility to TYPO3 6.2.

2014-11-03 Robert Heel <typo3@bobosch.de>
	* Feature #62639: Multiple email addresses for confirmation.
	* Feature #55478: Direct unsubscribe link.

2013-03-07 Robert Heel <typo3@bobosch.de>
	* Bug #43443: Replaced unsupported \TYPO3\CMS\Core\Utility.

2013-02-09 Robert Heel <typo3@bobosch.de>
	* Bug #43443: Replaced deprecated method readLLXMLfile (Thanks to Sebastian Steinmetz).
	* Bug #45269: Add language to ###LINK### (Thanks to wagner).

2012-10-14 Robert Heel <typo3@bobosch.de>
	* Bug #40907: User attributes are escaped twice (Thanks to Andy).

2012-08-28 Robert Heel <typo3@bobosch.de>
	* Bug #40289: Escape strings in SQL and HTML (Thanks to Andreas Heling).

2012-08-22 Robert Heel <typo3@bobosch.de>
	* Bugfix: Always use "setBody" to add email part (Thanks to Robert Steindl).

2012-07-20 Robert Heel <rheel@1drop.de>
	* Add: TS option for required fields.

2012-06-05 Robert Heel <rheel@1drop.de>
	* Bugfix: Ignore empty email address.

2012-05-25 Robert Heel <rheel@1drop.de>
	* Bug #36899: Using t3lib_mail_message instead of t3lib_htmlmail for TYPO3 4.7 compatibility (Thanks to Loek Hilgersom).
	* Feature #36901: Make direct_mail optional.

2012-02-29 Robert Heel <rheel@1drop.de>
	* Add: Support for fe_groups and tt_address_group.
	* Bugfix: User registration now works if no pid is set.

2011-03-22 Robert Heel <rheel@1drop.de>
	* Add: Greek FE translation (Thanks to Lars Jochimsen).

2011-02-18 Robert Heel <rheel@1drop.de>
	* Bug #12869: Mail address name (TS option mail_from_name and mail_reply_name).

2010-12-31 Robert Heel <rheel@1drop.de>
	* Update: jQuery 1.4.4.

2010-09-30 Robert Heel <rheel@1drop.de>
	* Bugfix: Replaced forgotten %s in mail template.
