@@ -24,6 +24,7 @@ plugin.tx_odsajaxmailsubscription_pi1 {
 	required.fields = email
 
 	authcode_fields = uid
+	authcode_expiration_time = 60
 	default_table = tt_address
 	mail_confirmation = {$plugin.tx_odsajaxmailsubscription_pi1.mail_confirmation}
 	mail_html = {$plugin.tx_odsajaxmailsubscription_pi1.mail_html}
