@@ -1,3 +1,6 @@
+2015-12-12 Robert Heel <typo3@bobosch.de>
+	* Security fix: Expiration of authorisation links (TS option authcode_expiration_time = 60 minutes).
+
 2015-11-20 Robert Heel <typo3@bobosch.de>
 	* Security fix: Use GET params instead of a session.
 
